Added upload image in tournament add

--- a/tournament_add.html
+++ b/tournament_add.html
@@ -16,6 +16,14 @@
         </div> -->
         <div class="list-block inputs-list">
           <ul>
+          <li>
+            <div class="item-content" style="padding-left:0px; margin-left:5px; margin-right:5px;">
+               <div id="image-upload" onclick="getTournamentImage();" style="width:100%; margin-top:10px; background-color: #CCCCCC; border-radius:5px"">
+                  <img id="tournament-image" class="fit center" src="img/camera-flat.png" style="padding-left:0px; border-radius:5px;width:auto; height:200px; max-width:300px; max-height: 350px;" />
+               </div>
+            </div>
+            <br />
+          </li>
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
