--- a/main.html
+++ b/main.html
@@ -88,6 +88,7 @@
         </div>
     </div>
 
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/framework7.js"></script>
     <script type="text/javascript" src="js/envyp.js"></script>
