--- a/main.html
+++ b/main.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="css/envyp.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="icon" href="img/icon.png">
+    <style>
+      .pac-container {
+          z-index: 5000;
+      }
+    </style>
   </head>
   <body>
   <div class="panel-overlay"></div>
