--- a/tournament_add.html
+++ b/tournament_add.html
@@ -10,43 +10,60 @@
       </div>
     </div>
     <div class="page-content" style="padding-top:50px;">
-        <div class="content-block-title">Details</div>
-        <!-- <div class="login-screen-title">
-            <img src="img/profile.jpg" width="115px" height="115px" class="img-circle fit center">
+        <!-- <div class="content-block-title">Image</div>
+        <div class="list-block inputs-list" style="padding-bottom:0px; margin-bottom:0px;">
+          <ul>
+            <li>
+              <div class="item-content" style="padding-left:0px; margin-left:5px; margin-right:5px;">
+                 <div id="image-upload" onclick="getTournamentImage();" style="width:100%; margin-top:10px; background-color: #CCCCCC; border-radius:5px"">
+                    <img id="tournament-image" class="fit center" src="img/camera-flat.png" style="padding-left:0px; border-radius:5px;width:auto; height:200px; max-width:300px; max-height: 350px;" />
+                 </div>
+              </div>
+              <br />
+            </li>
+          </ul>
         </div> -->
+        <div class="content-block-title" style="padding-top:0px;">Details</div>
         <div class="list-block inputs-list">
           <ul>
-          <li>
-            <div class="item-content" style="padding-left:0px; margin-left:5px; margin-right:5px;">
-               <div id="image-upload" onclick="getTournamentImage();" style="width:100%; margin-top:10px; background-color: #CCCCCC; border-radius:5px"">
-                  <img id="tournament-image" class="fit center" src="img/camera-flat.png" style="padding-left:0px; border-radius:5px;width:auto; height:200px; max-width:300px; max-height: 350px;" />
-               </div>
-            </div>
-            <br />
-          </li>
             <li>
               <div class="item-content">
+                <div class="item-media"><i class="fa fa-futbol-o" aria-hidden="true"></i></div>
+                <div class="item-inner"> 
+                  <div class="item-title label">Image</div>
+                  <div class="item-input">
+                    <img id="tournament-image" class="fit center" src="img/camera-flat.png" style="padding-left:0px; border-radius:5px;width:auto; height:100px; max-width:100px; max-height: 150px;" />
+                    <p><a href="#" id="image-upload" onclick="getTournamentImage();" class="link link-only">Upload</a></p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-media"><i class="fa fa-futbol-o" aria-hidden="true"></i></div>
                 <div class="item-inner"> 
                   <div class="item-title label">Opponent</div>
                   <div class="item-input">
-                    <input id="txt-opponent-name" type="text" placeholder="Opponent"/>
+                    <textarea id="txt-opponent-name" class="resizable" placeholder="Opponent" required="required" ></textarea>
                   </div>
                 </div>
               </div>
             </li>
             <li>
                 <div class="item-content">
+                  <div class="item-media"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
                    <div class="item-inner">
                       <div class="item-title label">Location</div>
                       <div class="item-input">
-                         <!-- <textarea id="txt-tournament-location" class="resizable" placeholder="Location" required="required" ></textarea> -->
-                         <input id="txt-tournament-location" type="text" placeholder="Location" required="required" />
+                         <textarea id="txt-tournament-location" class="resizable" placeholder="Location" required="required" ></textarea>
+                         <!-- <input id="txt-tournament-location" type="text" placeholder="Location" required="required" /> -->
                       </div>
                    </div>
                 </div>
              </li>
             <li>
               <div class="item-content">
+                <div class="item-media"><i class="fa fa-calendar" aria-hidden="true"></i></div>
                 <div class="item-inner"> 
                   <div class="item-title label">Date</div>
                   <div class="item-input">
@@ -57,6 +74,7 @@
             </li>
             <li>
               <div class="item-content">
+                <div class="item-media"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></div>
                 <div class="item-inner"> 
                   <div class="item-title label">Description</div>
                   <div class="item-input">
