updated add tournament

--- a/tournament_add.html
+++ b/tournament_add.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="page-content" style="padding-top:50px;">
-        <!-- <div class="content-block-title">Image</div>
+        <div class="content-block-title">Image</div>
         <div class="list-block inputs-list" style="padding-bottom:0px; margin-bottom:0px;">
           <ul>
             <li>
@@ -22,22 +22,10 @@
               <br />
             </li>
           </ul>
-        </div> -->
+        </div>
         <div class="content-block-title" style="padding-top:0px;">Details</div>
         <div class="list-block inputs-list">
           <ul>
-            <li>
-              <div class="item-content">
-                <div class="item-media"><i class="fa fa-futbol-o" aria-hidden="true"></i></div>
-                <div class="item-inner"> 
-                  <div class="item-title label">Image</div>
-                  <div class="item-input">
-                    <img id="tournament-image" class="fit center" src="img/camera-flat.png" style="padding-left:0px; border-radius:5px;width:auto; height:100px; max-width:100px; max-height: 150px;" />
-                    <p><a href="#" id="image-upload" onclick="getTournamentImage();" class="link link-only">Upload</a></p>
-                  </div>
-                </div>
-              </div>
-            </li>
             <li>
               <div class="item-content">
                 <div class="item-media"><i class="fa fa-futbol-o" aria-hidden="true"></i></div>
