--- a/main.html
+++ b/main.html
@@ -18,6 +18,21 @@
       .pac-container {
           z-index: 5000;
       }
+
+      .fit {
+          max-width: 100%;
+          max-height: 100%;
+      }
+      
+      .center {
+          display: block;
+          margin: auto;
+      }
+
+      .blur {
+        -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+        filter: grayscale(100%);
+      }
     </style>
   </head>
   <body>
