--- a/main.html
+++ b/main.html
@@ -33,6 +33,10 @@
         -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
         filter: grayscale(100%);
       }
+
+      .img-circle {
+          border-radius: 50%;
+      }
     </style>
   </head>
   <body>
