--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -67,7 +67,7 @@
             </ul>
           </div>
           <div class="content-block">
-            <p><a href="#" id="btn-edit-tournament" class="button button-big button-fill button-raised color-teal">Edit</a></p>
+            <p><a href="#" id="btn-edit-tournament-details" class="button button-big button-fill button-raised color-teal">Edit</a></p>
           </div>
         </div>
         <div id="roster" class="page-content tab" style="padding-top:250px;">
@@ -123,6 +123,9 @@
                     </div>
                   </div>
                 </div>
+                <div class="content-block">
+                <p><a href="#" id="btn-edit-team-stats" class="button button-big button-fill button-raised color-teal">Edit</a></p>
+              </div>
             </div>
           </div>
         </div>
