--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -66,8 +66,8 @@
               </li>
             </ul>
           </div>
-          <div class="content-block">
-            <p><a href="#" id="btn-edit-tournament-details" class="button button-big button-fill button-raised color-teal">Edit</a></p>
+          <div class="content-block" style="margin-top:0px;">
+            <p style="margin-top:0px;"><a href="#" id="btn-edit-tournament-details" class="button button-big button-fill button-raised color-teal">Edit</a></p>
           </div>
         </div>
         <div id="roster" class="page-content tab" style="padding-top:250px;">
@@ -85,13 +85,13 @@
                   <div class="col-100">
                     <div class="row">
                       <div class="col-40">
-                        <p id="team-name"></p>
+                        <p id="team-name" style="font-weight:bold;"></p>
                       </div>
                       <div class="col-20">
                         <p><b>vs</b></p>
                       </div>
                       <div class="col-40">
-                        <p id="opponent-name"></p>
+                        <p id="opponent-name" style="font-weight:bold;"></p>
                       </div>
                       <div class="col-40">
                         <p id="team-points"></p>
@@ -123,8 +123,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="content-block">
-                <p><a href="#" id="btn-edit-team-stats" class="button button-big button-fill button-raised color-teal">Edit</a></p>
+                <div class="content-block" style="margin-top:0px;">
+                <p style="margin-top:0px;"><a href="#" id="btn-edit-team-stats" class="button button-big button-fill button-raised color-teal">Edit</a></p>
               </div>
             </div>
           </div>
