--- a/edit_tournament_stats.html
+++ b/edit_tournament_stats.html
@@ -5,14 +5,14 @@
         <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
         <div class="center">Edit Statistics</div>
         <div class="right">
-          <a href="#" id="btn-update-roster-stats" class="link icon-only">
+          <a href="#" id="btn-update-tournament-stats" class="link icon-only">
             <i class="fa fa-check" aria-hidden="true"></i>
           </a>
         </div>
       </div>
     </div>
     <div class="page-content" style="padding-top:56px;">
-      <div class="content-block-title">Team</div>
+      <div id="txt-edit-team-name" class="content-block-title"></div>
       <div class="list-block inputs-list">
         <ul>
           <li>
@@ -20,7 +20,7 @@
               <div class="item-inner"> 
                 <div class="item-title label">Points</div>
                 <div class="item-input">
-                  <input id="edit-roster-points" type="number" placeholder="Points" value=""/>
+                  <input id="txt-edit-team-points" type="number" placeholder="Points" value=""/>
                 </div>
               </div>
             </div>
@@ -30,7 +30,7 @@
               <div class="item-inner"> 
                 <div class="item-title label">Assists</div>
                 <div class="item-input">
-                  <input id="edit-roster-assists" type="number" placeholder="Assists" value=""/>
+                  <input id="txt-edit-team-assists" type="number" placeholder="Assists" value=""/>
                 </div>
               </div>
             </div>
@@ -40,14 +40,14 @@
               <div class="item-inner"> 
                 <div class="item-title label">Fouls</div>
                 <div class="item-input">
-                  <input id="edit-roster-fouls" type="number" placeholder="Fouls" value=""/>
+                  <input id="txt-edit-team-fouls" type="number" placeholder="Fouls" value=""/>
                 </div>
               </div>
             </div>
           </li>
         </ul>
       </div> 
-      <div class="content-block-title" style="padding-top:0px;">Opponent</div>
+      <div id="txt-edit-opponent-name" class="content-block-title" style="padding-top:0px;"></div>
       <div class="list-block inputs-list">
         <ul>
           <li>
@@ -55,7 +55,7 @@
               <div class="item-inner"> 
                 <div class="item-title label">Points</div>
                 <div class="item-input">
-                  <input id="edit-roster-points" type="number" placeholder="Points" value=""/>
+                  <input id="txt-edit-opponent-points" type="number" placeholder="Points" value=""/>
                 </div>
               </div>
             </div>
@@ -65,7 +65,7 @@
               <div class="item-inner"> 
                 <div class="item-title label">Assists</div>
                 <div class="item-input">
-                  <input id="edit-roster-assists" type="number" placeholder="Assists" value=""/>
+                  <input id="txt-edit-opponent-assists" type="number" placeholder="Assists" value=""/>
                 </div>
               </div>
             </div>
@@ -75,7 +75,7 @@
               <div class="item-inner"> 
                 <div class="item-title label">Fouls</div>
                 <div class="item-input">
-                  <input id="edit-roster-fouls" type="number" placeholder="Fouls" value=""/>
+                  <input id="txt-edit-opponent-fouls" type="number" placeholder="Fouls" value=""/>
                 </div>
               </div>
             </div>
