--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -1,9 +1,9 @@
 <div class="pages">
   <div data-page="tournament-detail" class="page navbar-fixed toolbar-fixed" >
-    <div class="navbar" style="height:200px; background-image: url('img/exg.jpg'); background-size: 100% 100%; -webkit-filter: grayscale(0.5);">
+    <div id="tournament-background-image" class="navbar" style="height:200px; background-size: 100% 100%; -webkit-filter: grayscale(0.5);">
       <div class="navbar-inner">
         <div class="left" style="padding-bottom:150px;"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
-        <div id="tournament-name" class="center" style="padding-top:150px;padding-left:5px;"></div>
+        <!-- <div id="tournament-name" class="center" style="padding-top:150px;padding-left:5px;"></div> -->
         <div class="right"></div>
       </div>
     </div>
