--- a/account_list.html
+++ b/account_list.html
@@ -1,6 +1,6 @@
 <div class="pages">
   <div data-page="account-list" class="page navbar-fixed toolbar-fixed" >
-    <div class="navbar theme-blue">
+    <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
           <a href="#" id="btn-account-back-tm" class="back link icon-only"><i class="icon icon-back"></i></a>
