--- a/choose_sports.html
+++ b/choose_sports.html
@@ -1,6 +1,6 @@
 <div class="pages">
   <div data-page="choose-sports" class="page navbar-fixed toolbar-fixed green_bg" >
-    <div class="navbar theme-blue">
+    <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
           <!-- <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a> -->
@@ -12,16 +12,16 @@
     <div class="page-content">
       <div class="ks-grid">
         <div class="row no-gutter">
-          <div class="col-50"><a href="home.html?sport_id=1&image_url=img/icon-basketball.png"><img src="img/icon-basketball.png" class="img-responsive icon-sports" alt="" /></a></div>
-          <div class="col-50"><a href="home.html?sport_id=2&image_url=img/icon-volleyball.png"><img src="img/icon-volleyball.png" class="img-responsive icon-sports" alt="" /></a></div>
+          <div class="col-50"><a href="home.html?sport_id=1&image_url=img/icon-basketball.png"><img src="img/icon-basketball.png" class="img-responsive icon-sports" alt="" /></a><p><b>Basketball</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=2&image_url=img/icon-volleyball.png"><img src="img/icon-volleyball.png" class="img-responsive icon-sports" alt="" /></a><p><b>Volleyball</b></p></div>
         </div>
         <div class="row no-gutter">
-          <div class="col-50"><a href="home.html?sport_id=3&image_url=img/icon-golf.png"><img src="img/icon-golf.png" class="img-responsive icon-sports" alt="" /></a></div>
-          <div class="col-50"><a href="home.html?sport_id=4&image_url=img/icon-baseball.png"><img src="img/icon-baseball.png" class="img-responsive icon-sports" alt="" /></a></div>
+          <div class="col-50"><a href="home.html?sport_id=3&image_url=img/icon-golf.png"><img src="img/icon-golf.png" class="img-responsive icon-sports" alt="" /></a><p><b>Golf</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=4&image_url=img/icon-baseball.png"><img src="img/icon-baseball.png" class="img-responsive icon-sports" alt="" /></a><p><b>Baseball</b></p></div>
         </div>
         <div class="row no-gutter">
-          <div class="col-50"><a href="home.html?sport_id=5&image_url=img/icon-soccer.png"><img src="img/icon-soccer.png" class="img-responsive icon-sports" alt="" /></a></div>
-          <div class="col-50"><a href="home.html?sport_id=6&image_url=img/icon-cricket.png"><img src="img/icon-cricket.png" class="img-responsive icon-sports" alt="" /></a></div>
+          <div class="col-50"><a href="home.html?sport_id=5&image_url=img/icon-soccer.png"><img src="img/icon-soccer.png" class="img-responsive icon-sports" alt="" /></a><p><b>Soccer</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=6&image_url=img/icon-cricket.png"><img src="img/icon-cricket.png" class="img-responsive icon-sports" alt="" /></a><p><b>Cricket</b></p></div>
         </div>
       </div>
     </div>
