--- a/roster_update.html
+++ b/roster_update.html
@@ -1,18 +1,18 @@
 <div class="pages">
-  <div data-page="roster-add" class="page navbar-fixed toolbar-fixed" >
+  <div data-page="roster-update" class="page navbar-fixed toolbar-fixed" >
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
           <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
         </div>
-        <div class="center">Add Roster</div>
+        <div class="center">Update Roster</div>
         <div class="right"></div>
       </div>
     </div>
     <div class="page-content" style="padding-top:50px;">
         <div class="content-block-title">Details</div>
-        <div onclick="getRosterImage();">
-          <img id="roster-image" src="img/profile.jpg" width="115px" height="115px" class="img-circle fit center">
+        <div onclick="editRosterImage();">
+          <img id="edit-roster-image" src="img/profile.jpg" width="115px" height="115px" class="img-circle fit center">
         </div>
         <div class="list-block inputs-list">
           <ul>
@@ -21,7 +21,7 @@
                 <div class="item-inner"> 
                   <div class="item-title label">Roster name</div>
                   <div class="item-input">
-                    <input id="txt-roster-name" type="text" placeholder="Full name"/>
+                    <input id="edit-txt-roster-name" type="text" placeholder="Full name"/>
                   </div>
                 </div>
               </div>
@@ -31,7 +31,7 @@
                 <div class="item-inner"> 
                   <div class="item-title label">Position</div>
                   <div class="item-input">
-                    <input id="txt-roster-position" type="text" placeholder="Position"/>
+                    <input id="edit-txt-roster-position" type="text" placeholder="Position"/>
                   </div>
                 </div>
               </div>
@@ -39,7 +39,7 @@
           </ul>
         </div>
         <div class="content-block">
-          <p><a href="#" id="btn-add-roster" class="button button-big button-fill button-raised color-teal">Continue</a></p>
+          <p><a href="#" id="btn-update-roster" class="button button-big button-fill button-raised color-teal">Continue</a></p>
         </div>
     </div>
     </div>
