--- a/team_management.html
+++ b/team_management.html
@@ -1,6 +1,6 @@
 <div class="pages">
   <div data-page="team-management" class="page navbar-fixed toolbar-fixed" >
-    <div class="navbar theme-blue">
+    <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
           <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
