--- a/team_add.html
+++ b/team_add.html
@@ -10,9 +10,10 @@
       </div>
     </div>
     <div class="page-content" style="padding-top:50px;">
-        <!-- <div class="login-screen-title">
-            <img id="img-team-picture" src="" class="img-responsive icon-sports">
-        </div> -->
+        <div class="content-block-title">Upload Image</div>
+        <div onclick="getTeamImage();">
+          <img id="team-image" src="img/icon-basketball.png" width="115px" height="115px" class="img-circle fit center">
+        </div>
         <div class="content-block-title">Details</div>
         <div class="list-block inputs-list">
           <ul>
