--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -14,6 +14,9 @@
         <a href="#stats" style="padding-top:145px;" class="tab-link">Stats</a>
       </div>
     </div>
+    <div id="div-add-tournament-roster">
+      <a id="btn-add-tournament-roster" href="tournament_roster_list.html" class="floating-button color-pink"><i class="icon icon-plus"></i></a>
+    </div>
     <div class="tabs-swipeable-wrap">
       <div class="tabs">
         <div id="detail" class="page-content tab active" style="padding-top:250px;">
