--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -28,9 +28,10 @@
                   <div class="item-media"><i class="fa fa-futbol-o" aria-hidden="true"></i></div>
                   <div class="item-inner"> 
                     <div class="item-title label">Opponent</div>
-                    <div class="item-input">
+                    <!-- <div class="item-input">
                       <textarea id="txt-opponent-name" class="resizable" disabled></textarea>
-                    </div>
+                    </div> -->
+                    <p id="txt-opponent-name"></p>
                   </div>
                 </div>
               </li>
@@ -39,9 +40,10 @@
                     <div class="item-media"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
                      <div class="item-inner">
                         <div class="item-title label">Location</div>
-                        <div class="item-input">
+                        <!-- <div class="item-input">
                            <textarea id="txt-tournament-location" class="resizable" disabled ></textarea>
-                        </div>
+                        </div> -->
+                        <p id="txt-tournament-location"></p>
                      </div>
                   </div>
                </li>
@@ -50,9 +52,10 @@
                   <div class="item-media"><i class="fa fa-calendar" aria-hidden="true"></i></div>
                   <div class="item-inner"> 
                     <div class="item-title label">Date</div>
-                    <div class="item-input">
+                    <!-- <div class="item-input">
                       <textarea id="txt-tournament-date" class="resizable" disabled></textarea>
-                    </div>
+                    </div> -->
+                    <p id="txt-tournament-date"></p>
                   </div>
                 </div>
               </li>
@@ -61,9 +64,10 @@
                   <div class="item-media"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></div>
                   <div class="item-inner"> 
                     <div class="item-title label">Description</div>
-                    <div class="item-input">
+                    <!-- <div class="item-input">
                       <textarea id="txt-tournament-description" class="resizable" disabled></textarea>
-                    </div>
+                    </div> -->
+                    <p id="txt-tournament-description"></p>
                   </div>
                 </div>
               </li>
