--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="theme-indigo">
   <div class="panel-overlay"></div>
   <div class="panel panel-right panel-cover">
      <div class="pages navbar-fixed">
