--- a/tournament_roster_list.html
+++ b/tournament_roster_list.html
@@ -3,7 +3,7 @@
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
-          <a href="#" id="btn-tournament-detail-back" class="link icon-only"><i class="icon icon-back"></i></a>
+          <a href="#" id="btn-tournament-detail-back" class="back link icon-only"><i class="icon icon-back"></i></a>
         </div>
         <div class="center">Roster List</div>
         <div class="right"></div>
