--- a/fine_add.html
+++ b/fine_add.html
@@ -7,6 +7,9 @@
         </div>
         <div class="center">Create Fine</div>
         <div class="right">
+          <a href="#" id="btn-add-fine" class="back link icon-only">
+            <i class="fa fa-check" aria-hidden="true"></i>
+          </a>
         </div>
       </div>
     </div>
@@ -15,7 +18,7 @@
         <div class="list-block inputs-list">
           <ul>
             <li>
-              <a href="#" class="item-link smart-select">
+              <a href="#" class="item-link smart-select" data-open-in="picker">
               <select id="select-roster-list" name="roster">
                 <option value="" selected="selected">Select a roster</option>
               </select>
@@ -47,9 +50,9 @@
             </li>
           </ul>
         </div>
-        <div class="content-block">
-          <p><a href="#" id="btn-add-fine" class="button button-big button-fill button-raised color-teal">Submit</a></p>
-        </div>
+        <!-- <div class="content-block">
+          <p><a href="#" id="btn-add-fine" class="back button button-big button-fill button-raised color-teal">Submit</a></p>
+        </div> -->
     </div>
     </div>
   </div>
