--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -22,6 +22,9 @@
     <div id="div-add-tournament-fine">
       <a id="btn-add-tournament-fine" href="fine_add.html" class="floating-button color-blue"><i class="icon icon-plus"></i></a>
     </div>
+    <div id="div-add-tournament-vote">
+      <a id="btn-add-tournament-vote" href="vote_add.html" class="floating-button color-blue fa-2x"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></a>
+    </div>
     <div class="tabs-swipeable-wrap">
       <div class="tabs">
         <div id="detail" class="page-content tab active" style="padding-top:250px;">
@@ -150,7 +153,12 @@
           </div>
         </div>
         <div id="mvp" class="page-content tab" style="padding-top:250px;">
-
+          <div class="content-block">
+            <div class="list-block media-list">
+              <ul id="vote_list">
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
