--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -22,9 +22,6 @@
     <div id="div-add-tournament-fine">
       <a id="btn-add-tournament-fine" href="fine_add.html" class="floating-button color-blue"><i class="icon icon-plus"></i></a>
     </div>
-    <div id="div-add-tournament-vote">
-      <a id="btn-add-tournament-vote" href="vote_add.html" class="floating-button color-blue fa-2x"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></a>
-    </div>
     <div class="tabs-swipeable-wrap">
       <div class="tabs">
         <div id="detail" class="page-content tab active" style="padding-top:250px;">
@@ -153,10 +150,35 @@
           </div>
         </div>
         <div id="mvp" class="page-content tab" style="padding-top:250px;">
-          <div class="content-block">
-            <div class="list-block media-list">
-              <ul id="vote_list">
+          <div id="div-vote-add">
+            <div class="content-block-title">Enter your vote</div>
+            <div class="list-block inputs-list">
+              <ul>
+                <li>
+                  <a href="#" class="item-link smart-select" data-open-in="picker">
+                    <select id="select-vote-list" name="roster">
+                      <option value="" selected="selected">Select a roster</option>
+                    </select>
+                    <div class="item-content">
+                      <div class="item-inner">
+                        <div class="item-title">Roster</div>
+                      </div>
+                  </div>
+                  </a>
+                </li>
               </ul>
+            </div>
+            <div class="content-block">
+              <p><a href="#" id="btn-submit-vote" class="button button-big button-fill button-raised color-teal">Vote</a></p>
+            </div>
+          </div>
+          <div id="div-vote-result">
+            <!-- <div class="content-block-title">Vote result</div> -->
+            <div class="content-block">
+              <div class="list-block media-list">
+                <ul id="vote_list">
+                </ul>
+              </div>
             </div>
           </div>
         </div>
