--- a/fine_detail.html
+++ b/fine_detail.html
@@ -12,13 +12,13 @@
         <img id="fine-detail-image" src="" class="img-circle fit center" style="width:150px; height: 150px;" />
         <center><p id="fine-detail-name" style="font-size:20px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
       </div>
-      <div class="content-block-title">Price</div>
+      <div class="content-block-title">Description</div>
+      <div class="content-block" style="margin-bottom:0px;">  
+        <p id="fine-detail-description"></p>
+      </div>
+      <div class="content-block-title" style="padding-top:0px; margin-top:0px;">Price</div>
       <div class="content-block">
         <p id="fine-detail-price"></p>
-      </div>
-      <div class="content-block-title" style="padding-top:0px; margin-top:0px;">Description</div>
-      <div id="fine-detail-price" class="content-block">  
-        <p id="fine-detail-description"></p>
       </div>
     </div>
   </div>
