--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -24,59 +24,23 @@
     </div>
     <div class="tabs-swipeable-wrap">
       <div class="tabs">
-        <div id="detail" class="page-content tab active" style="padding-top:250px;">
-          <div class="content-block-title" style="padding-top:0px;">Details</div>
-          <div class="list-block inputs-list">
-            <ul>
-             <li>
-                <div class="item-content">
-                  <div class="item-media"><i class="fa fa-futbol-o" aria-hidden="true"></i></div>
-                  <div class="item-inner"> 
-                    <div class="item-title label">Opponent</div>
-                    <!-- <div class="item-input">
-                      <textarea id="txt-opponent-name" class="resizable" disabled></textarea>
-                    </div> -->
-                    <p id="txt-opponent-name"></p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                  <div class="item-content">
-                    <div class="item-media"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-                     <div class="item-inner">
-                        <div class="item-title label">Location</div>
-                        <!-- <div class="item-input">
-                           <textarea id="txt-tournament-location" class="resizable" disabled ></textarea>
-                        </div> -->
-                        <p id="txt-tournament-location"></p>
-                     </div>
-                  </div>
-               </li>
-              <li>
-                <div class="item-content">
-                  <div class="item-media"><i class="fa fa-calendar" aria-hidden="true"></i></div>
-                  <div class="item-inner"> 
-                    <div class="item-title label">Date</div>
-                    <!-- <div class="item-input">
-                      <textarea id="txt-tournament-date" class="resizable" disabled></textarea>
-                    </div> -->
-                    <p id="txt-tournament-date"></p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="item-content">
-                  <div class="item-media"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></div>
-                  <div class="item-inner"> 
-                    <div class="item-title label">Description</div>
-                    <!-- <div class="item-input">
-                      <textarea id="txt-tournament-description" class="resizable" disabled></textarea>
-                    </div> -->
-                    <p id="txt-tournament-description"></p>
-                  </div>
-                </div>
-              </li>
-            </ul>
+        <div id="detail" class="page-content tab active" style="padding-top:240px;">
+          <!-- <div class="content-block-title" style="padding-top:0px;">Details</div> -->
+          <div class="content-block-title">Opponent</div>
+          <div class="content-block" style="margin-bottom:0px;">
+            <p id="txt-opponent-name"></p>
+          </div>
+          <div class="content-block-title" style="padding-top:0px; margin-top:0px;">Location</div>
+          <div class="content-block" style="margin-bottom:0px;">  
+            <p id="txt-tournament-location"></p>
+          </div>
+          <div class="content-block-title" style="padding-top:0px; margin-top:0px;">Date</div>
+          <div class="content-block" style="margin-bottom:0px;">  
+            <p id="txt-tournament-date"></p>
+          </div>
+          <div class="content-block-title" style="padding-top:0px; margin-top:0px;">Description</div>
+          <div class="content-block">  
+            <p id="txt-tournament-description"></p>
           </div>
           <div class="content-block" style="margin-top:0px;">
             <p style="margin-top:0px;"><a href="#" id="btn-edit-tournament-details" class="button button-big button-fill button-raised color-teal">Edit</a></p>
