--- a/team_management.html
+++ b/team_management.html
@@ -7,7 +7,10 @@
         </div>
         <div id="header-team-name" class="center"></div>
         <!-- <div class="right"></div> -->
-        <div class="right"><a href="#" id="open-right-panel" data-panel="right" class="link icon-only"><i class="icon icon-bars"></i></a></div>
+        <div class="right">
+          <a href="choose_sports.html" class="link icon-only"><i class="fa fa-home" aria-hidden="true"></i></a>
+          <a href="#" id="open-right-panel" data-panel="right" class="link icon-only"><i class="icon icon-bars"></i></a>
+        </div>
       </div>
     </div>
     <div class="page-content" style="padding-top:50px;">
@@ -16,37 +19,6 @@
         <p><a href="#" id="btn-tournament" class="button button-big button-fill button-raised color-teal">Tournament Program</a></p>
         <p><a href="#" id="btn-statistics" class="button button-big button-fill button-raised color-teal">Statistics</a></p>
       </div>
-        <!-- <div class="login-screen-title">
-            <img id="img-team-picture" src="" class="img-responsive icon-sports">
-        </div> -->
-        <!-- <div class="content-block-title">Details</div>
-        <div class="list-block inputs-list">
-          <ul>
-            <li>
-              <div class="item-content">
-                <div class="item-inner"> 
-                  <div class="item-title label">Team name</div>
-                  <div class="item-input">
-                    <input id="txt-team-name" type="text" placeholder="Team name"/>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="item-content">
-                <div class="item-inner"> 
-                  <div class="item-title label">Description</div>
-                  <div class="item-input">
-                    <textarea id="txt-team-description" class="resizable" placeholder="Description"></textarea>
-                  </div>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div> -->
-        <!-- <div class="content-block">
-          <p><a href="#" id="btn-add-team" class="button button-big button-fill button-raised color-teal">Continue</a></p>
-        </div> -->
     </div>
     </div>
   </div>
