--- a/choose_sports.html
+++ b/choose_sports.html
@@ -5,8 +5,10 @@
         <div class="left">
           <!-- <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a> -->
         </div>
-        <div class="center" style="margin-left: auto">Choose Sports</div>
-        <div class="right"></div>
+        <div class="center">Choose Sports</div>
+        <div class="right">
+          <a href="#" id="open-left-panel" data-panel="left" class="link icon-only"><i class="fa fa-user" aria-hidden="true"></i></a>
+        </div>
       </div>
     </div>
     <div class="page-content">
