--- a/home.html
+++ b/home.html
@@ -6,7 +6,8 @@
           <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
         </div>
         <div class="center">Home</div>
-        <div class="right"></div>
+        <div class="right">
+        </div>
       </div>
     </div>
     <div class="page-content center-outer">
