--- a/team_add.html
+++ b/team_add.html
@@ -6,7 +6,9 @@
           <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
         </div>
         <div class="center">Create Team</div>
-        <div class="right"></div>
+        <div class="right">
+          <a href="choose_sports.html" class="link icon-only"><i class="fa fa-home" aria-hidden="true"></i></a>
+        </div>
       </div>
     </div>
     <div class="page-content" style="padding-top:50px;">
