--- a/team_list.html
+++ b/team_list.html
@@ -6,7 +6,9 @@
           <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
         </div>
         <div class="center">Team List</div>
-        <div class="right"></div>
+        <div class="right">
+          <a href="choose_sports.html" class="link icon-only"><i class="fa fa-home" aria-hidden="true"></i></a>
+        </div>
       </div>
     </div>
     <form data-search-list=".virtual-list" class="searchbar searchbar-init">
