--- a/profile_add.html
+++ b/profile_add.html
@@ -3,7 +3,9 @@
       <div class="page-content center-outer">
           <div class="center-inner">
             <div class="login-screen-title">
-                <img src="img/profile.jpg" width="115px" height="115px" class="img-circle fit center">
+              <div onclick="getRosterImage();">
+                  <img id="img-profile" src="img/profile.jpg" width="115px" height="115px" class="img-circle fit center">
+              </div>
             </div>
             <br />
             <div class="list-block inset inputs-list" style="width:100%;margin-left:auto;margin-right:auto;">
