--- a/profile_add.html
+++ b/profile_add.html
@@ -3,8 +3,8 @@
       <div class="page-content center-outer">
           <div class="center-inner">
             <div class="login-screen-title">
-              <div onclick="getRosterImage();">
-                  <img id="img-profile" src="img/profile.jpg" width="115px" height="115px" class="img-circle fit center">
+              <div onclick="getProfileImage();">
+                  <img id="profile-image" src="img/profile.jpg" width="115px" height="115px" class="img-circle fit center">
               </div>
             </div>
             <br />
