--- a/main.html
+++ b/main.html
@@ -71,7 +71,7 @@
               <li>
                 <div class="item-content">
                   <div class="item-inner"> 
-                    <div class="item-title"><a href="#" class="link icon-only">Edit Profile</a></div>
+                    <div class="item-title"><a id="btn-edit-profile" href="#" class="link icon-only">Edit Profile</a></div>
                   </div>
                 </div>
               </li>
