--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="theme-color" content="#2196f3">
-    <title>Envyp</title>
+    <title>Envp</title>
     <link rel="stylesheet" href="css/framework7.material.css">
     <link rel="stylesheet" href="css/framework7.material.colors.css">
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css">
@@ -123,9 +123,9 @@
                     <div class="login-screen-title">
                         <img src="img/envyp_logo.png" class="img-responsive img-center" >
                     </div>
-                    <div class="content-block">
+                    <!-- <div class="content-block">
                       <p><a href="#" class="button button-big button-fill button-raised color-indigo">Facebook</a></p>
-                    </div>
+                    </div> -->
                     <div class="list-block inset inputs-list" style="width:100%;margin-left:auto;margin-right:auto;">
                       <ul>
                         <li>
