--- a/signup.html
+++ b/signup.html
@@ -39,6 +39,7 @@
           </div>
           <div class="content-block">
             <p><a href="#" id="btn-signup" class="button button-big button-fill button-raised color-teal">Signup</a></p>
+            <center><p style="font-size:15px;"><a href="main.html" class="link icon-only">Signin</a></p></center>
           </div>
           </div>
         </div>
