--- a/main.html
+++ b/main.html
@@ -121,11 +121,11 @@
                 <div class="page-content center-outer">
                   <div class="center-inner">
                     <div class="login-screen-title">
-                        <img src="img/envyp_logo.png" class="img-responsive img-center" >
+                        <img src="img/envp-logo.png" class="img-responsive img-center" >
                     </div>
-                    <div class="content-block">
+                    <!-- <div class="content-block">
                       <p><a href="#" onclick="FBLogin();" class="button button-big button-fill button-raised color-indigo">Facebook</a></p>
-                    </div>
+                    </div> -->
                     <div class="list-block inset inputs-list" style="width:100%;margin-left:auto;margin-right:auto;">
                       <ul>
                         <li>
