--- a/main.html
+++ b/main.html
@@ -123,9 +123,9 @@
                     <div class="login-screen-title">
                         <img src="img/envp-logo.png" class="img-responsive img-center" >
                     </div>
-                    <!-- <div class="content-block">
+                    <div class="content-block">
                       <p><a href="#" onclick="FBLogin();" class="button button-big button-fill button-raised color-indigo">Facebook</a></p>
-                    </div> -->
+                    </div>
                     <div class="list-block inset inputs-list" style="width:100%;margin-left:auto;margin-right:auto;">
                       <ul>
                         <li>
