--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
-          <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
+          <a href="choose_sports.html" class="link icon-only"><i class="icon icon-back"></i></a>
         </div>
         <div class="center">Home</div>
         <div class="right">
