--- a/team_management.html
+++ b/team_management.html
@@ -3,7 +3,7 @@
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
-          <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
+          <a href="home.html" class="link icon-only"><i class="icon icon-back"></i></a>
         </div>
         <div id="header-team-name" class="center"></div>
         <!-- <div class="right"></div> -->
