--- a/roster_list.html
+++ b/roster_list.html
@@ -6,7 +6,9 @@
           <a href="team_management.html" class="link icon-only"><i class="icon icon-back"></i></a>
         </div>
         <div class="center">Roster List</div>
-        <div class="right"></div>
+        <div class="right">
+          <a href="choose_sports.html" class="link icon-only"><i class="fa fa-home" aria-hidden="true"></i></a>
+        </div>
       </div>
     </div>
     <a href="roster_add.html" id="btn-show-add-roster" class="floating-button color-pink"><i class="icon icon-plus"></i></a>
