--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -2,7 +2,7 @@
   <div data-page="tournament-detail" class="page navbar-fixed toolbar-fixed" >
     <div id="tournament-background-image" class="navbar" style="height:200px; background-size: 100% 100%; -webkit-filter: grayscale(0.5);">
       <div class="navbar-inner">
-        <div class="left" style="padding-bottom:150px;"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
+        <div class="left" style="padding-bottom:150px;"><a href="tournament_list.html" class="link icon-only"><i class="icon icon-back"></i></a></div>
         <!-- <div id="tournament-name" class="center" style="padding-top:150px;padding-left:5px;"></div> -->
         <div class="right"></div>
       </div>
