--- a/team_management.html
+++ b/team_management.html
@@ -13,11 +13,21 @@
         </div>
       </div>
     </div>
-    <div class="page-content" style="padding-top:50px;">
-      <div class="content-block">
+    <!-- <div class="page-content" style="padding-top:50px;"> -->
+      <!-- <div class="content-block">
         <p><a href="#" id="btn-roster" class="button button-big button-fill button-raised color-teal">Roster</a></p>
         <p><a href="#" id="btn-tournament" class="button button-big button-fill button-raised color-teal">Tournament Program</a></p>
-        <p><a href="#" id="btn-statistics" class="button button-big button-fill button-raised color-teal">Statistics</a></p>
+        <p><a href="team_stats.html" id="btn-statistics" class="button button-big button-fill button-raised color-teal">Statistics</a></p>
+      </div> -->
+    <div class="page-content">
+      <div class="ks-grid">
+        <div class="row no-gutter">
+          <div class="col-50"><a href="#" id="btn-roster"><img src="img/flat-roster.png" class="img-responsive icon-sports" alt="" />Roster</a></div>
+          <div class="col-50"><a href="#" id="btn-tournament"><img src="img/flat-calendar.png" class="img-responsive icon-sports" alt="" />Tournament</a></div>
+        </div>
+        <div class="row no-gutter">
+          <div class="col-100"><a href="team_stats.html" id="btn-statistics"><img src="img/flat-stats.ico" class="img-responsive icon-sports" alt=""/>Statistics</a></div>
+        </div>
       </div>
     </div>
     </div>
