--- a/team_stats.html
+++ b/team_stats.html
@@ -5,16 +5,13 @@
         <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
         <div class="center">Team Statistics</div>
         <div class="right">
-          <a href="#" id="btn-edit-roster-detail" class="link icon-only">
-            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-          </a>
         </div>
       </div>
     </div>
     <div class="page-content" style="padding-top:56px;">
-      <div style="width:100%; background-color:#008B8B; padding-top:15px; padding-bottom:15px;">
-        <img id="roster-detail-image" src="" class="img-circle fit center" style="width:150px; height: 150px;" />
-        <center><p id="roster-detail-name" style="font-size:20px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
+      <div style="width:100%; background-color:#34495E; padding-top:55px; padding-bottom:10px;">
+        <img id="roster-detail-image" src="https://img0.etsystatic.com/101/0/6004863/il_570xN.834576390_pjgc.jpg" class="img-circle fit center" style="width:120px; height: 120px;" />
+        <center><p id="roster-detail-name" style="font-size:17px; font-weight:bold; color:white; margin-bottom:0px;">Chicago Bulls</p></center>
         <center><p id="roster-detail-position" style="color:white; margin-top:0px;"></p></center>
       </div>
       <div class="list-block">
@@ -23,7 +20,7 @@
               <div class="item-content">
                 <div class="item-inner"> 
                   <div class="item-title">PPG</div>
-                  <div id="roster-ppg" class="item-after"></div>
+                  <div id="team-ppg" class="item-after"></div>
                 </div>
               </div>
             </li>
@@ -31,7 +28,7 @@
               <div class="item-content">
                 <div class="item-inner"> 
                   <div class="item-title">APG</div>
-                  <div id="roster-apg" class="item-after"></div>
+                  <div id="team-apg" class="item-after"></div>
                 </div>
               </div>
             </li>
@@ -39,7 +36,7 @@
               <div class="item-content">
                 <div class="item-inner"> 
                   <div class="item-title">FPG</div>
-                  <div id="roster-fpg" class="item-after"></div>
+                  <div id="team-fpg" class="item-after"></div>
                 </div>
               </div>
             </li>
