--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
       }
     </style>
   </head>
-  <body class="theme-indigo">
+  <body class="theme-green">
   <div class="panel-overlay"></div>
   <div class="panel panel-left panel-cover">
      <div class="pages navbar-fixed">
@@ -49,6 +49,13 @@
                 <div class="item-content">
                   <div class="item-inner"> 
                     <div class="item-title"><a id="btn-edit-profile" href="#" class="link icon-only">Edit Profile</a></div>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="item-content">
+                  <div class="item-inner"> 
+                    <div class="item-title"><a id="btn-choose-language" href="#" class="link icon-only open-popover" data-popover=".popover-menu">Language</a></div>
                   </div>
                 </div>
               </li>
