--- a/roster_edit.html
+++ b/roster_edit.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="page-content" style="padding-top:50px;">
-        <div class="content-block-title">Details</div>
+        <div class="content-block-title">Image</div>
         <div onclick="editRosterImage();">
           <img id="edit-roster-image" src="img/profile.jpg" width="115px" height="115px" class="img-circle fit center">
         </div>
