--- a/choose_sports.html
+++ b/choose_sports.html
@@ -1,11 +1,11 @@
 <div class="pages">
-  <div data-page="choose-sports" class="page navbar-fixed toolbar-fixed green_bg" >
+  <div data-page="choose-sports" class="page navbar-fixed toolbar-fixed" >
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
           <!-- <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a> -->
         </div>
-        <div class="center">Choose Sports</div>
+        <div id="lbl-choose-sports" class="center"></div>
         <div class="right">
           <a href="#" id="open-left-panel" data-panel="left" class="link icon-only"><i class="fa fa-user" aria-hidden="true"></i></a>
         </div>
@@ -14,16 +14,16 @@
     <div class="page-content">
       <div class="ks-grid">
         <div class="row no-gutter">
-          <div class="col-50"><a href="home.html?sport_id=1&image_url=img/icon-basketball.png"><img src="img/icon-basketball.png" class="img-responsive icon-sports" alt="" /></a><p><b>Basketball</b></p></div>
-          <div class="col-50"><a href="home.html?sport_id=2&image_url=img/icon-volleyball.png"><img src="img/icon-volleyball.png" class="img-responsive icon-sports" alt="" /></a><p><b>Volleyball</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=1&image_url=img/basketball.png"><img src="img/basketball.png" class="img-responsive icon-sports" alt="" style="width:100px; height: 110px;"/></a><p><b>Basketball</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=2&image_url=img/floorball.png"><img src="img/floorball.png" class="img-responsive icon-sports" alt="" style="width:100px; height: 110px;"/></a><p><b>Floorball</b></p></div>
         </div>
         <div class="row no-gutter">
-          <div class="col-50"><a href="home.html?sport_id=3&image_url=img/icon-golf.png"><img src="img/icon-golf.png" class="img-responsive icon-sports" alt="" /></a><p><b>Golf</b></p></div>
-          <div class="col-50"><a href="home.html?sport_id=4&image_url=img/icon-baseball.png"><img src="img/icon-baseball.png" class="img-responsive icon-sports" alt="" /></a><p><b>Baseball</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=3&image_url=img/football.png"><img src="img/football.png" class="img-responsive icon-sports" alt="" style="width:100px; height: 110px;"/></a><p><b>Football</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=4&image_url=img/handball.jpg"><img src="img/handball.jpg" class="img-responsive icon-sports" alt="" style="width:100px; height: 110px;"/></a><p><b>Handball</b></p></div>
         </div>
         <div class="row no-gutter">
-          <div class="col-50"><a href="home.html?sport_id=5&image_url=img/icon-soccer.png"><img src="img/icon-soccer.png" class="img-responsive icon-sports" alt="" /></a><p><b>Soccer</b></p></div>
-          <div class="col-50"><a href="home.html?sport_id=6&image_url=img/icon-cricket.png"><img src="img/icon-cricket.png" class="img-responsive icon-sports" alt="" /></a><p><b>Cricket</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=5&image_url=img/icehokey.png"><img src="img/icehokey.png" class="img-responsive icon-sports" alt="" style="width:100px; height: 110px;"/></a><p><b>Ice Hockey</b></p></div>
+          <div class="col-50"><a href="home.html?sport_id=6&image_url=img/rugby.jpg"><img src="img/rugby.jpg" class="img-responsive icon-sports" alt="" style="width:100px; height: 110px;"/></a><p><b>Rugby</b></p></div>
         </div>
       </div>
     </div>
