--- a/home.html
+++ b/home.html
@@ -1,11 +1,11 @@
 <div class="pages">
-  <div data-page="home" class="page navbar-fixed toolbar-fixed green_bg" >
+  <div data-page="home" class="page navbar-fixed toolbar-fixed" >
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
           <a href="choose_sports.html" class="link icon-only"><i class="icon icon-back"></i></a>
         </div>
-        <div class="center">Home</div>
+        <div id="lbl-home" class="center"></div>
         <div class="right">
         </div>
       </div>
