--- a/roster_detail.html
+++ b/roster_detail.html
@@ -12,8 +12,8 @@
       </div>
     </div>
     <div class="page-content" style="padding-top:56px;">
-      <div style="width:100%; background-color:#008B8B; padding-top:15px; padding-bottom:15px;">
-        <img id="roster-detail-image" src="" class="img-circle fit center" style="width:150px; height: 150px;" />
+      <div style="width:100%; background-color:#34495E; padding-top:55px; padding-bottom:10px;">
+        <img id="roster-detail-image" src="" class="img-circle fit center" style="width:120px; height: 120px;" />
         <center><p id="roster-detail-name" style="font-size:20px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
         <center><p id="roster-detail-position" style="color:white; margin-top:0px;"></p></center>
       </div>
