--- a/team_stats.html
+++ b/team_stats.html
@@ -10,9 +10,8 @@
     </div>
     <div class="page-content" style="padding-top:56px;">
       <div style="width:100%; background-color:#34495E; padding-top:55px; padding-bottom:10px;">
-        <img id="roster-detail-image" src="https://img0.etsystatic.com/101/0/6004863/il_570xN.834576390_pjgc.jpg" class="img-circle fit center" style="width:120px; height: 120px;" />
-        <center><p id="roster-detail-name" style="font-size:17px; font-weight:bold; color:white; margin-bottom:0px;">Chicago Bulls</p></center>
-        <center><p id="roster-detail-position" style="color:white; margin-top:0px;"></p></center>
+        <img id="img-team-image" src="" class="img-circle fit center" style="width:120px; height: 120px;" />
+        <center><p id="p-team-name" style="font-size:17px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
       </div>
       <div class="list-block">
           <ul>
